--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ executing==1.2.0
 ipython==8.14.0
 jedi==0.18.2
 matplotlib-inline==0.1.6
+numpy==1.25.2
+pandas==2.0.3
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -15,7 +17,10 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.15.1
 pysam==0.21.0
+python-dateutil==2.8.2
+pytz==2023.3
 six==1.16.0
 stack-data==0.6.2
 traitlets==5.9.0
+tzdata==2023.3
 wcwidth==0.2.6
